renamed RealPad to SmartPadConverter

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <script src="/Classes/View/AccessMIDI.js" defer></script>
-    <script src="/Classes/Model/RealPad.js" defer></script>
+    <script src="/Classes/Model/SmartPadConverter.js" defer></script>
+    <script src="/Classes/Model/PadModel.js" defer></script>
     <script src="/Classes/Controller/Sequence.js" defer></script>
     <script src="script.js" defer></script>
   </body>
