--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="widthEnd=device-widthEnd, initial-scale=1" />
     <link rel="stylesheet" href="" />
   </head>
   <body>
@@ -14,5 +14,6 @@
     <script src="/Classes/Model/PadModel.js" defer></script>
     <script src="/Classes/Controller/Sequence.js" defer></script>
     <script src="script.js" defer></script>
+    <button>Start Audio</button>
   </body>
 </html>
