scrapped sequence object and replaced with three objects with more specific function

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="widthEnd=device-widthEnd, initial-scale=1" />
-    <link rel="stylesheet" href="" />
-  </head>
-  <body>
-    <script src="/Classes/View/AccessMIDI.js" defer></script>
-    <script src="/Classes/Model/SmartPadConverter.js" defer></script>
-    <script src="/Classes/Model/PadModel.js" defer></script>
-    <script src="/Classes/Controller/Sequence.js" defer></script>
-    <script src="script.js" defer></script>
-    <button>Start Audio</button>
-  </body>
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <title></title>
+        <meta name="description" content=""/>
+        <meta name="viewport" content="widthEnd=device-widthEnd, initial-scale=1"/>
+        <link rel="stylesheet" href=""/>
+    </head>
+    <body>
+        <script src="/Classes/View/AccessMIDI.js" defer></script>
+        <script src="/Classes/View/VirtualSmartPad.js" defer></script>
+        <script src="/Classes/Model/SmartPadConverter.js" defer></script>
+        <script src="/Classes/Model/PadModel.js" defer></script>
+        <script src="script.js" defer></script>
+        <button>Start Audio</button>
+        <div class='pad-div'></div>
+    </body>
 </html>
