virtual pad not displaying all pads

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <meta charset="utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta name="description" content=""/>
-        <meta name="viewport" content="widthEnd=device-widthEnd, initial-scale=1"/>
-        <link rel="stylesheet" href=""/>
-    </head>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css"></head>
     <body>
+
+        <div class="pad-div"></div>
         <script src="/Classes/View/AccessMIDI.js" defer></script>
-        <script src="/Classes/View/VirtualSmartPad.js" defer></script>
-        <script src="/Classes/Model/SmartPadConverter.js" defer></script>
+        <script src=" /Classes/View/VirtualSmartPad.js" defer></script>
+        <script src=" /Classes/Model/SmartPadConverter.js" defer></script>
         <script src="/Classes/Model/PadModel.js" defer></script>
-        <script src="script.js" defer></script>
-        <button>Start Audio</button>
-        <div class='pad-div'></div>
+        <script src="/Classes/Controller/Playhead.js" defer></script>
+        <script src="/Classes/Controller/SixteenFour.js" defer></script>
+
+
+        <script src="script.js" async="async" defer></script>
     </body>
 </html>
