working on web audio api scheduling

--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css"></head>
-    <body>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                <title></title>
+                <meta name="description" content="">
+                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                        <link rel="stylesheet" href="style.css"></head>
+                        <body>
 
-        <div class="pad-div"></div>
-        <script src="/Classes/View/AccessMIDI.js" defer></script>
-        <script src=" /Classes/View/VirtualSmartPad.js" defer></script>
-        <script src=" /Classes/Model/SmartPadConverter.js" defer></script>
-        <script src="/Classes/Model/PadModel.js" defer></script>
-        <script src="/Classes/Controller/Playhead.js" defer></script>
-        <script src="/Classes/Controller/SixteenFour.js" defer></script>
+                            <div class="pad-div"></div>
+                            <script src="/Classes/View/AccessMIDI.js" defer="defer"></script>
+                            <script src=" /Classes/View/VirtualSmartPad.js" defer="defer"></script>
+                            <script src=" /Classes/Model/SmartPadConverter.js" defer="defer"></script>
+                            <script src="/Classes/Model/PadModel.js" defer="defer"></script>
+                            <script src="/Classes/Controller/Playhead.js" defer="defer"></script>
+                            <script src="/Classes/Controller/SixteenFour.js" defer="defer"></script>
 
+                            <script src="Prototype Scripts/tinkeringWithTiming.js" defer="defer"></script>
 
-        <script src="script.js" async="async" defer></script>
-    </body>
-</html>
+                            <script src="script.js" defer="defer"></script>
+                        </body>
+                    </html>
