converted timing prototype to a working class

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <body>
 
         <div class="pad-div"></div>
-        <script src="/Classes/View/AccessMIDI.js" defer="defer"></script>
-        <script src=" /Classes/View/VirtualSmartPad.js" defer="defer"></script>
-        <script src=" /Classes/Model/SmartPadConverter.js" defer="defer"></script>
-        <script src="/Classes/Model/PadModel.js" defer="defer"></script>
-        <script src="/Classes/Controller/Playhead.js" defer="defer"></script>
-        <script src="/Classes/Controller/SixteenFour.js" defer="defer"></script>
+        <script src="/Classes/View/AccessMIDI.js"></script>
+        <script src=" /Classes/View/VirtualSmartPad.js"></script>
+        <script src=" /Classes/Model/SmartPadConverter.js"></script>
+        <script src="/Classes/Model/PadModel.js"></script>
+        <script src="/Classes/Controller/Playhead.js"></script>
+        <script src="/Classes/Controller/Repeater.js" defer></script>
+        <script src="/Classes/Controller/SixteenFour.js"></script>
 
-        <script src="Prototype Scripts/Tinkering W Timing/4-timing.js" defer="defer"></script>
+
+        <!-- <script src="Prototype Scripts/Tinkering W Timing/5-timing.js"  =" "></script> -->
 
 
-        <script src="script.js" defer="defer"></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
