--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <script src=" /Classes/Model/SmartPadConverter.js"></script>
         <script src="/Classes/Model/PadModel.js"></script>
         <script src="/Classes/Controller/Playhead.js"></script>
-        <script src="/Classes/Controller/Repeater.js" defer></script>
+        <script src="/Classes/Controller/Repeater/repeaterWorker.js"></script>
+        <script src="/Classes/Controller/Repeater/Repeater.js"></script>
         <script src="/Classes/Controller/SixteenFour.js"></script>
-
-
-        <!-- <script src="Prototype Scripts/Tinkering W Timing/5-timing.js"  =" "></script> -->
 
 
         <script src="script.js" defer></script>
