added proto for metropolis sequencer

--- a/Prototype Scripts/Metropolis/index.html
+++ b/Prototype Scripts/Metropolis/index.html
@@ -9,16 +9,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css"></head>
     <body>
-        <!-- prettier-ignore -->
-        <!-- <div class="pad-div"></div>
-                                     <script src="/Classes/View/AccessMIDI.js"></script>
-                                    <script src=" /Classes/View/VirtualSmartPad.js"></script>
-                                    <script src=" /Classes/Model/SmartPadConverter.js"></script>
-                                    <script src="/Classes/Model/PadModel.js"></script>
-                                    <script src="/Classes/Controller/Playhead.js"></script>
-                                    <script src="/Classes/Controller/Repeater/repeaterWorker.js"></script>
-                                    <script src="/Classes/Controller/Repeater/Repeater.js"></script>
-                                    <script src="/Classes/Controller/SixteenFour.js"></script> --><button class='button'> </button>
+        <button class='button'></button>
+        <h1 class="note-display">0</h1>
+        <input class='tempo-slider' type='range' min='0' max='250' value='60'>
+        <h1 class="tempo-display">60</h1>
+        <script src="/Classes/Controller/Repeater/repeaterWorker.js" defer></script>
         <script src="metro1.js" defer></script>
     </body>
 </html>
