--- a/Prototype Scripts/Syncing MIDI and Audio/index.html
+++ b/Prototype Scripts/Syncing MIDI and Audio/index.html
@@ -11,14 +11,16 @@
     <body>
         <!-- prettier-ignore -->
         <!-- <div class="pad-div"></div>
-                                     <script src="/Classes/View/AccessMIDI.js"></script>
-                                    <script src=" /Classes/View/VirtualSmartPad.js"></script>
-                                    <script src=" /Classes/Model/SmartPadConverter.js"></script>
-                                    <script src="/Classes/Model/PadModel.js"></script>
-                                    <script src="/Classes/Controller/Playhead.js"></script>
-                                    <script src="/Classes/Controller/Repeater/repeaterWorker.js"></script>
-                                    <script src="/Classes/Controller/Repeater/Repeater.js"></script>
-                                    <script src="/Classes/Controller/SixteenFour.js"></script> --><button class='button'> </button>
-        <script src="metro1.js" defer></script>
+                                                     <script src="/Classes/View/AccessMIDI.js"></script>
+                                                    <script src=" /Classes/View/VirtualSmartPad.js"></script>
+                                                    <script src=" /Classes/Model/SmartPadConverter.js"></script>
+                                                    <script src="/Classes/Model/PadModel.js"></script>
+                                                    <script src="/Classes/Controller/Playhead.js"></script>
+                                                    <script src="/Classes/Controller/Repeater/repeaterWorker.js"></script>
+                                                    <script src="/Classes/Controller/Repeater/Repeater.js"></script>
+                                                    <script src="/Classes/Controller/SixteenFour.js"></script> --><button class='button'> </button>
+        <script src="/Classes/View/AccessMIDI.js"></script>
+
+        <script src="script.js" defer></script>
     </body>
 </html>
